# energy-consumption-analytics

./: .gitignore  README.md
energy-coverage-sdp/: README.md  magefile.py  main.py  pyproject.toml  requirements.txt
energy-coverage-sdp/.github/workflows/: deploy.yml
energy-coverage-sdp/backend/database/: init_duckdb.py
energy-coverage-sdp/backend/models/: example_model.py
energy-coverage-sdp/dags/: example_dag.py
energy-coverage-sdp/docker/: Dockerfile  docker-compose.yml
energy-coverage-sdp/src/: main.py
energy-coverage-sdp/src/jobs/: example_job.py  ingestion_job.py
energy-coverage-sdp/src/utils/: helpers.py
