[project]
name = "energy-coverage-sdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dbt-core>=1.9.4",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "typing>=3.10.0.0",
]
